# 2023CoilGun

./: README.md  noetic-camera_calibration_parsers-wet.rosinstall  noetic-cv_bridge-wet.rosinstall  noetic-dynamic_reconfigure_ros.rosinstall  noetic-nav_msgs-wet.rosinstall  noetic-sensor_msgs-wet.rosinstall
.rosinstall/: noetic-common_msgs-wet.rosinstall  noetic-image_transport-wet.rosinstall  noetic-image_view-wet.rosinstall  noetic-nodelet-wet.rosinstall  noetic-roslint-wet.rosinstall
.sh/: install_ros_noetic.sh  install_ros_packages.sh
devel/include/dynamic_reconfigure/: TestConfig.h
devel/include/flir_lepton_image_processing/: thermal_cfgConfig.h
devel/include/flir_lepton_msgs/: CandidateRoisVectorMsg.h
devel/include/image_view/: ImageViewConfig.h
devel/lib/camera_calibration_parsers/: convert
devel/lib/flir_lepton/: flir_lepton_node
devel/lib/flir_lepton_image_processing/: thermal_camera_node
devel/lib/flir_lepton_sensor/: flir_lepton_sensor_node
devel/lib/gencpp/: gen_cpp.py
devel/lib/geneus/: gen_eus.py
devel/lib/genlisp/: gen_lisp.py
devel/lib/gennodejs/: gen_nodejs.py
devel/lib/genpy/: genmsg_py.py  gensrv_py.py
devel/lib/image_transport/: list_transports  republish
devel/lib/image_view/: disparity_view  extract_images  image_saver  image_view  stereo_view  video_recorder
devel/lib/nodelet/: nodelet
devel/lib/pkgconfig/: Lepton3.pc  bond.pc  bondcpp.pc  catkin.pc  class_loader.pc  cmake_modules.pc  cpp_common.pc  cv_bridge.pc  dynamic_reconfigure.pc  flir_lepton.pc  flir_lepton_auxiliary.pc  flir_lepton_image_processing.pc  flir_lepton_launchers.pc  flir_lepton_msgs.pc  flir_lepton_sensor.pc  gencpp.pc  geneus.pc  genlisp.pc  genmsg.pc  gennodejs.pc  genpy.pc  image_geometry.pc  image_view.pc  lepton_msg_pkg.pc  message_filters.pc  mux.pc  nodelet.pc  opencv_tests.pc  pluginlib.pc  qt_build.pc  qt_create.pc  ros_environment.pc  rosbag.pc  rosbag_migration_rule.pc  rosbag_storage.pc  rosbash.pc  rosbuild.pc  rosclean.pc  rosconsole.pc  roscpp.pc  (+39 more)
devel/lib/rosbag/: bagsort.py  encrypt  fastrebag.py  fix_msg_defs.py  fixbag.py  play  record  savemsg.py
devel/lib/roslib/: gendeps
devel/lib/rosout/: rosout
devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
devel/lib/rosserial_client/: make_library.py
devel/lib/rosserial_embeddedlinux/: make_libraries.py
devel/lib/rosserial_mbed/: make_libraries.py
devel/lib/rosserial_python/: message_info_service.py
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rosserial_windows/: make_libraries.py
devel/lib/topic_tools/: demux  drop  mux  mux_add  mux_delete  mux_list  relay  switch_mux  throttle
extra/lepton3/: CMakeLists.txt  package.xml
extra/lepton3/src/: LeptonThread.cpp  Makefile  main.cpp
install/lib/rosbag/: play  (+2 more)
src/: .rosinstall  .rosinstall.bak
src/Lepton3/: CMakeLists.txt  package.xml
src/Lepton3/src/: SPI.cpp  main.cpp  raspberrypi_video.pro
src/dynamic_reconfigure/: .tar
src/flir_lepton/: CMakeLists.txt
src/lepton_msg_pkg/: CMakeLists.txt  package.xml
src/mux/: CMakeLists.txt  package.xml
src/rosbag_migration_rule/: .tar
src/roslint/: .tar
(+419 files in other folders)
